@@ -1,37 +1,40 @@
 package hanam.parc.BE.config;
 
-import hanam.parc.BE.auth.jwt.config.JwtSecurityConfig;
-import hanam.parc.BE.auth.jwt.handler.JwtAccessDeniedHandler;
-import hanam.parc.BE.auth.jwt.jwt.JwtAuthenticationEntryPoint;
-import hanam.parc.BE.auth.jwt.filter.JwtFilter;
-import hanam.parc.BE.auth.jwt.provider.JwtTokenProvider;
-import lombok.RequiredArgsConstructor;
+import hanam.parc.BE.auth.jwt.filter.CustomAuthenticationFilter;
+import hanam.parc.BE.auth.jwt.filter.JwtAuthorizationFilter;
+import hanam.parc.BE.auth.jwt.handler.CustomAuthFailureHandler;
+import hanam.parc.BE.auth.jwt.handler.CustomAuthSuccessHandler;
+import hanam.parc.BE.auth.jwt.provider.CustomAuthenticationProvider;
+import hanam.parc.BE.auth.jwt.service.CustomUserDetailsService;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.boot.autoconfigure.security.servlet.PathRequest;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.ProviderManager;
+import org.springframework.security.authorization.AuthorizationDecision;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configuration.WebSecurityCustomizer;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
-import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.access.intercept.RequestAuthorizationContext;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.authentication.www.BasicAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.function.Supplier;
 
+@Slf4j
 @Configuration
-@EnableWebSecurity
-@RequiredArgsConstructor
 public class SecurityConfig {
-
-    private final JwtTokenProvider jwtTokenProvider;
-
-    private final JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint;
-
-    private final JwtAccessDeniedHandler jwtAccessDeniedHandler;
 
     private static final String[] SWAGGER_PATTERNS = {
             "/v3/api-docs/**",
@@ -44,56 +47,111 @@ public class SecurityConfig {
             "/swagger-resources/configuration/ui",
             "/swagger-resources/configuration/security",
             "/swagger-resources",
-            "/v2/api-docs"
+            "/v2/api-docs",
+            "/api-docs/json"
     };
 
     @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
+    public WebSecurityCustomizer webSecurityCustomizer() {
+        return web -> web.ignoring()
+                .requestMatchers(PathRequest.toStaticResources().atCommonLocations())
+                .requestMatchers("/css/**", "/js/**", "/img/**");
     }
 
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        return new JwtSecurityConfig(jwtTokenProvider).configureAndReturn(
-                http
-                        .csrf(AbstractHttpConfigurer::disable)
-                        .cors((cors) ->
-                                cors.configurationSource(corsConfigurationSource())
-                        )
-                        .exceptionHandling((exceptionHandling) ->
-                                exceptionHandling
-                                        .authenticationEntryPoint(jwtAuthenticationEntryPoint)
-                                        .accessDeniedHandler(jwtAccessDeniedHandler)
-                        )
-                        .sessionManagement((sessionManagement) ->
-                                sessionManagement.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                        )
-                        .formLogin(AbstractHttpConfigurer::disable)
-                        .httpBasic(AbstractHttpConfigurer::disable)
-                        .authorizeHttpRequests((authorizeHttpRequests) ->
-                                        authorizeHttpRequests
-//                                .requestMatchers("/", "/**").permitAll()
-//                                .requestMatchers("/auth/login").permitAll()
-//                                .requestMatchers("/auth/signup").permitAll()
-//                                .requestMatchers(SWAGGER_PATTERNS).permitAll()
-                                                .anyRequest().permitAll()
-                        )
-        ).build();
+    public SecurityFilterChain filterChain(
+            HttpSecurity http,
+            CustomAuthenticationFilter customAuthenticationFilter,
+            JwtAuthorizationFilter jwtAuthorizationFilter
+    ) throws Exception {
+        log.debug("[+] WebSecurityConfig Start !!! ");
+        return http
+                .csrf(AbstractHttpConfigurer::disable)
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .authorizeHttpRequests(authorize -> authorize
+                        .requestMatchers("/login", "/join").permitAll()
+                        .requestMatchers("/member/list").permitAll()
+                        .requestMatchers("board/list").permitAll()
+                        .requestMatchers("/swagger-ui.html").permitAll()
+                        .requestMatchers("/swagger-ui/index.html").permitAll()
+                        .requestMatchers("/swagger-ui/**").permitAll()
+                        .requestMatchers("/swagger-resources/**").permitAll()
+                        .requestMatchers("/**").permitAll()
+                        .requestMatchers(SWAGGER_PATTERNS).permitAll()
+                        .anyRequest().permitAll()
+                )
+                .addFilterBefore(jwtAuthorizationFilter, BasicAuthenticationFilter.class)
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .formLogin(AbstractHttpConfigurer::disable)
+                .addFilterBefore(customAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
+                .build();
     }
-
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration corsConfiguration = new CorsConfiguration();
-
-        corsConfiguration.setAllowedOriginPatterns(List.of("*"));
-        corsConfiguration.setAllowedMethods(List.of("*"));
-        corsConfiguration.setAllowedHeaders(List.of("*"));
-        corsConfiguration.setAllowCredentials(true);
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOrigins(Arrays.asList("*"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
+        configuration.setAllowedHeaders(Arrays.asList("X-Requested-With", "Content-Type", "Authorization", "X-XSRF-token"));
+        configuration.setAllowCredentials(false);
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", corsConfiguration);
-
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
+
+    @Bean
+    public JwtAuthorizationFilter jwtAuthorizationFilter(CustomUserDetailsService userDetailsService) {
+        return new JwtAuthorizationFilter(userDetailsService);
+    }
+
+    @Bean
+    public CustomAuthenticationFilter customAuthenticationFilter(
+            AuthenticationManager authenticationManager,
+            CustomAuthSuccessHandler customAuthSuccessHandler,
+            CustomAuthFailureHandler customAuthFailureHandler
+    ) {
+        CustomAuthenticationFilter customAuthenticationFilter = new CustomAuthenticationFilter(authenticationManager);
+        // "/user/login" 엔드포인트로 들어오는 요청을 CustomAuthenticationFilter에서 처리하도록 지정한다.
+        customAuthenticationFilter.setFilterProcessesUrl("/login");
+        customAuthenticationFilter.setAuthenticationSuccessHandler(customAuthSuccessHandler);    // '인증' 성공 시 해당 핸들러로 처리를 전가한다.
+        customAuthenticationFilter.setAuthenticationFailureHandler(customAuthFailureHandler);    // '인증' 실패 시 해당 핸들러로 처리를 전가한다.
+        customAuthenticationFilter.afterPropertiesSet();
+        return customAuthenticationFilter;
+    }
+
+    @Bean
+    public AuthenticationManager authenticationManager(CustomAuthenticationProvider customAuthenticationProvider) {
+        return new ProviderManager(Collections.singletonList(customAuthenticationProvider));
+    }
+
+    @Bean
+    public CustomAuthenticationProvider customAuthenticationProvider(UserDetailsService userDetailsService) {
+        return new CustomAuthenticationProvider(
+                userDetailsService
+        );
+    }
+
+    @Bean
+    public CustomAuthSuccessHandler customLoginSuccessHandler() {
+        return new CustomAuthSuccessHandler();
+    }
+
+    @Bean
+    public CustomAuthFailureHandler customLoginFailureHandler() {
+        return new CustomAuthFailureHandler();
+    }
+
+    private AuthorizationDecision isAdmin(
+            Supplier<Authentication> authenticationSupplier,
+            RequestAuthorizationContext requestAuthorizationContext
+    ) {
+        return new AuthorizationDecision(
+                authenticationSupplier.get()
+                        .getAuthorities()
+                        .contains(new SimpleGrantedAuthority("ADMIN"))
+        );
+    }
+
 }
